--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     
 
-    <script src="pickupDollsGame.js"></script>
+    <script src="YinandYangPlusMinus.js"></script>
 </body>
 </html>
